# agent-cli-runner

./: .gitignore  Cargo.toml  build.rs
src/: config.rs  error.rs  events.rs  lib.rs  process.rs  session.rs  stream.rs
src/parsers/: claude.rs  codex.rs  gemini.rs  mod.rs
tests/: claude_integration.rs  codex_integration.rs  gemini_integration.rs  schema_extraction.rs  session_integration.rs
